# terminal_music

./: Cargo.toml  README.md
src/: app.rs  main.rs  mpv.rs  music.rs  online.rs  song.rs  ui.rs  utils.rs
