[package]
name = "music-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.5"
id3 = "1.16"
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
named_pipe = "0.4"
directories = "5.0"
colored = "2.0"
indicatif = "0.17"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
winapi = { version = "0.3.9", features = ["namedpipeapi"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }


